--- a/proof/cases/progress/haskell-ml/cons-hv.tex
+++ b/proof/cases/progress/haskell-ml/cons-hv.tex
@@ -2,6 +2,6 @@
 
 $e_{H}=\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}$
 
-$\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}$ is a value.
+$\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}$ is an unforced value.
 
 \end{case}
