--- a/proof/cases/progress/haskell-ml/function-application-h.tex
+++ b/proof/cases/progress/haskell-ml/function-application-h.tex
@@ -2,6 +2,6 @@
 
 $e_{H}=e_{H}^{1}$ $e_{H}^{2}$
 
-$e_{H}^{1}$ is a value or $e_{H}^{1}\rightarrow e_{H}^{3}$ or $e_{H}^{1}\rightarrow$ \emph{\textbf{Error}: string} by the induction hypothesis.  If $e_{H}^{1}$ is a value then $e_{H}^{1}:T_{1}\rightarrow T_{2}$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) and $e_{H}^{1}=\lambda x:T_{1}.e_{H}^{4}$ by canonical forms (Lemma \ref{cf}).  $(\lambda x:T_{1}.e_{H}^{4})$ $e_{H}^{2}\rightarrow e_{H}^{4}[e_{H}^{2}/x]$.  If $e_{H}^{1}\rightarrow e_{H}^{3}$ then $e_{H}^{1}$ $e_{H}^{2}\rightarrow e_{H}^{3}$ $e_{H}^{2}$.  If $e_{H}^{1}\rightarrow$ \emph{\textbf{Error}: string} then $e_{H}^{1}$ $e_{H}^{2}\rightarrow$ \emph{\textbf{Error}: string}.
+$e_{H}^{1}$ is an unforced value or $e_{H}^{1}\rightarrow e_{H}^{3}$ or $e_{H}^{1}\rightarrow$ \emph{\textbf{Error}: string} by the induction hypothesis.  If $e_{H}^{1}$ is an unforced value then $e_{H}^{1}:T_{1}\rightarrow T_{2}$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) and $e_{H}^{1}=\lambda x:T_{1}.e_{H}^{4}$ by canonical forms (Lemma \ref{cf}).  $(\lambda x:T_{1}.e_{H}^{4})$ $e_{H}^{2}\rightarrow e_{H}^{4}[e_{H}^{2}/x]$.  If $e_{H}^{1}\rightarrow e_{H}^{3}$ then $e_{H}^{1}$ $e_{H}^{2}\rightarrow e_{H}^{3}$ $e_{H}^{2}$.  If $e_{H}^{1}\rightarrow$ \emph{\textbf{Error}: string} then $e_{H}^{1}$ $e_{H}^{2}\rightarrow$ \emph{\textbf{Error}: string}.
 
 \end{case}
