--- a/proof/cases/progress/haskell-ml/function.tex
+++ b/proof/cases/progress/haskell-ml/function.tex
@@ -2,6 +2,6 @@
 
 $e_{A}=\lambda x:T.e_{A}^{1}$ where $A\in\lbrace H,M\rbrace$
 
-$\lambda x:T.e_{A}^{1}$ is a value.
+$\lambda x:T.e_{A}^{1}$ is an unforced value.
 
 \end{case}
