--- a/proof/cases/progress/haskell-ml/ml.tex
+++ b/proof/cases/progress/haskell-ml/ml.tex
@@ -2,7 +2,7 @@
 
 $e_{H}={^{T}H}M^{T}$ $e_{M}^{1}$
 
-$e_{M}^{1}$ is a value or $e_{M}^{1}\rightarrow e_{M}^{2}$ or $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string} by the induction hypothesis.  If $e_{M}^{1}\rightarrow e_{M}^{2}$ then $^{T}HM^{T}$ $e_{M}^{1}\rightarrow{^{T}H}M$ $e_{M}^{2}$.  If $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string} then $^{T}HM^{T}$ $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string}.  If $e_{M}^{1}$ is a value then $T$ determines the reduction of $^{T}HM^{T}$ $e_{M}^{1}$:
+$e_{M}^{1}$ is an unforced value or $e_{M}^{1}\rightarrow e_{M}^{2}$ or $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string} by the induction hypothesis.  If $e_{M}^{1}\rightarrow e_{M}^{2}$ then $^{T}HM^{T}$ $e_{M}^{1}\rightarrow{^{T}H}M$ $e_{M}^{2}$.  If $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string} then $^{T}HM^{T}$ $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string}.  If $e_{M}^{1}$ is an unforced value then $T$ determines the reduction of $^{T}HM^{T}$ $e_{M}^{1}$:
 
 \begin{subcase}
 
