--- a/proof/cases/progress/haskell-ml/nil.tex
+++ b/proof/cases/progress/haskell-ml/nil.tex
@@ -2,6 +2,6 @@
 
 $e_{A}=\mathtt{nil}^{T}$ where $A\in\lbrace H,M\rbrace$
 
-$\mathtt{nil}^{T}$ is a value.
+$\mathtt{nil}^{T}$ is an unforced value.
 
 \end{case}
