--- a/proof/cases/progress/haskell-ml/number.tex
+++ b/proof/cases/progress/haskell-ml/number.tex
@@ -2,6 +2,6 @@
 
 $e_{A}=\overline{n}$ where $A\in\lbrace H,M\rbrace$
 
-$\overline{n}$ is a value.
+$\overline{n}$ is an unforced value.
 
 \end{case}
