--- a/proof/cases/progress/scheme/if0.tex
+++ b/proof/cases/progress/scheme/if0.tex
@@ -2,6 +2,6 @@
 
 $e_{S}=\mathtt{if0}$ $e_{S}^{1}$ $e_{S}^{2}$ $e_{S}^{3}$
 
-$e_{S}^{1}$ is a value or $e_{S}^{1}\rightarrow e_{S}^{4}$ or $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}: string} by the induction hypothesis.  If $e_{S}^{1}\rightarrow e_{S}^{4}$ then $\mathtt{if0}$ $e_{S}^{1}$ $e_{S}^{2}$ $e_{S}^{3}\rightarrow \mathtt{if0}$ $e_{S}^{4}$ $e_{S}^{2}$ $e_{S}^{3}$.  If $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}: string} then $\mathtt{if0}$ $e_{S}^{1}$ $e_{S}^{2}$ $e_{S}^{3}\rightarrow$ \emph{\textbf{Error}: string}.  $e_{S}^{1}$ is a value otherwise.  $\mathtt{if0}$ $\overline{0}$ $e_{S}^{2}$ $e_{S}^{3}\rightarrow e_{S}^{2}$.  $\mathtt{if0}$ $\overline{n}$ $e_{S}^{2}$ $e_{S}^{3}\rightarrow e_{S}^{3}$ $(n\neq 0)$.  $\mathtt{if0}$ $e_{S}^{1}$ $e_{S}^{2}$ $e_{S}^{3}\rightarrow\mathtt{wrong}$ \emph{``Not a number"} $(e_{S}^{1}\neq\overline{n})$.
+$e_{S}^{1}$ is an unforced value or $e_{S}^{1}\rightarrow e_{S}^{4}$ or $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}: string} by the induction hypothesis.  If $e_{S}^{1}\rightarrow e_{S}^{4}$ then $\mathtt{if0}$ $e_{S}^{1}$ $e_{S}^{2}$ $e_{S}^{3}\rightarrow \mathtt{if0}$ $e_{S}^{4}$ $e_{S}^{2}$ $e_{S}^{3}$.  If $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}: string} then $\mathtt{if0}$ $e_{S}^{1}$ $e_{S}^{2}$ $e_{S}^{3}\rightarrow$ \emph{\textbf{Error}: string}.  $e_{S}^{1}$ is an unforced value otherwise.  $\mathtt{if0}$ $\overline{0}$ $e_{S}^{2}$ $e_{S}^{3}\rightarrow e_{S}^{2}$.  $\mathtt{if0}$ $\overline{n}$ $e_{S}^{2}$ $e_{S}^{3}\rightarrow e_{S}^{3}$ $(n\neq 0)$.  $\mathtt{if0}$ $e_{S}^{1}$ $e_{S}^{2}$ $e_{S}^{3}\rightarrow\mathtt{wrong}$ \emph{``Not a number"} $(e_{S}^{1}\neq\overline{n})$.
 
 \end{case}
