--- a/proof/cases/progress/scheme/ml.tex
+++ b/proof/cases/progress/scheme/ml.tex
@@ -2,7 +2,7 @@
 
 $e_{S}=SM^{T}$ $e_{M}^{1}$
 
-$e_{M}^{1}$ is a value or $e_{M}^{1}\rightarrow e_{M}^{2}$ or $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string} by ML progress (Theorem \ref{hmps}).  If $e_{M}^{1}\rightarrow e_{M}^{2}$ then $SM^{T}$ $e_{M}^{1}\rightarrow SM^{T}$ $e_{M}^{2}$.  If $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string} then $SM^{T}$ $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string}.  If $e_{M}^{1}$ is a value then $T$ determines the reduction of $SM^{T}$ $e_{M}^{1}$:
+$e_{M}^{1}$ is an unforced value or $e_{M}^{1}\rightarrow e_{M}^{2}$ or $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string} by ML progress (Theorem \ref{hmps}).  If $e_{M}^{1}\rightarrow e_{M}^{2}$ then $SM^{T}$ $e_{M}^{1}\rightarrow SM^{T}$ $e_{M}^{2}$.  If $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string} then $SM^{T}$ $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string}.  If $e_{M}^{1}$ is an unforced value then $T$ determines the reduction of $SM^{T}$ $e_{M}^{1}$:
 
 \begin{subcase}
 
@@ -32,7 +32,7 @@ $e_{M}^{1}\in\lbrace\mathtt{nil}^{T_{1}[T_{i}/T_{i}^{a}]},\mathtt{cons}$ $v_{M}^
 
 $T=T_{1}^{a}$
 
-$SM^{T_{1}^{a}}$ $e_{M}^{1}$ is a value.
+$SM^{T_{1}^{a}}$ $e_{M}^{1}$ is an unforced value.
 
 \end{subcase}
 
