--- a/proof/cases/progress/haskell-ml/cons-mv.tex
+++ b/proof/cases/progress/haskell-ml/cons-mv.tex
@@ -2,6 +2,6 @@
 
 $e_{M}=\mathtt{cons}$ $v_{M}^{1}$ $v_{M}^{2}$
 
-$\mathtt{cons}$ $v_{M}^{1}$ $v_{M}^{2}$ is a value.
+$\mathtt{cons}$ $v_{M}^{1}$ $v_{M}^{2}$ is an unforced value.
 
 \end{case}
