--- a/proof/cases/progress/haskell-ml/scheme.tex
+++ b/proof/cases/progress/haskell-ml/scheme.tex
@@ -2,13 +2,13 @@
 
 $e_{A}={^{T}A}S$ $e_{S}^{1}$ where $A\in\lbrace H,M\rbrace$
 
-$e_{S}^{1}$ is a value or $e_{S}^{1}\rightarrow e_{S}^{2}$ or $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}: string} by Scheme progress (Theorem \ref{sps}).  If $e_{S}^{1}\rightarrow e_{S}^{2}$ then $^{T}AS$ $e_{S}^{1}\rightarrow{^{T}A}S$ $e_{S}^{2}$.  If $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}: string} then $^{T}AS$ $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}: string}.  If $e_{S}^{1}$ is a value then $T$ determines the reduction of $^{T}AS$ $e_{S}^{1}$:
+$e_{S}^{1}$ is an unforced value or $e_{S}^{1}\rightarrow e_{S}^{2}$ or $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}: string} by Scheme progress (Theorem \ref{sps}).  If $e_{S}^{1}\rightarrow e_{S}^{2}$ then $^{T}AS$ $e_{S}^{1}\rightarrow{^{T}A}S$ $e_{S}^{2}$.  If $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}: string} then $^{T}AS$ $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}: string}.  If $e_{S}^{1}$ is an unforced value then $T$ determines the reduction of $^{T}AS$ $e_{S}^{1}$:
 
 \begin{subcase}
 
 $T=L$
 
-$^{L}AS$ $e_{S}^{1}$ is a value.
+$^{L}AS$ $e_{S}^{1}$ is an unforced value.
 
 \end{subcase}
 
@@ -48,7 +48,7 @@ $^{T_{1}\rightarrow T_{2}}AS$ $(\lambda x_{1}.e_{S}^{3})\rightarrow\lambda x_{2}
 
 $T=\forall X.T_{1}$
 
-$^{\forall X.T_{1}}AS$ $e_{S}^{1}$ is a value.
+$^{\forall X.T_{1}}AS$ $e_{S}^{1}$ is an unforced value.
 
 \end{subcase}
 
