--- a/proof/cases/progress/haskell-ml/type-abstraction.tex
+++ b/proof/cases/progress/haskell-ml/type-abstraction.tex
@@ -2,6 +2,6 @@
 
 $e_{A}=\Lambda X.e_{A}^{1}$ where $A\in\lbrace H,M\rbrace$
 
-$\Lambda X.e_{A}^{1}$ is a value.
+$\Lambda X.e_{A}^{1}$ is an unforced value.
 
 \end{case}
