--- a/proof/cases/progress/scheme/cons-v.tex
+++ b/proof/cases/progress/scheme/cons-v.tex
@@ -2,6 +2,6 @@
 
 $e_{S}=\mathtt{cons}$ $v_{S}^{1}$ $v_{S}^{2}$
 
-$\mathtt{cons}$ $v_{S}^{1}$ $v_{S}^{2}$ is a value.
+$\mathtt{cons}$ $v_{S}^{1}$ $v_{S}^{2}$ is an unforced value.
 
 \end{case}
