--- a/proof/theorems/progress/scheme.tex
+++ b/proof/theorems/progress/scheme.tex
@@ -2,7 +2,7 @@
 
 \label{sps}
 
-If $\vdash_{S}e_{S}:TST$ then $e_{S}$ is a value or $e_{S}\rightarrow e_{S}'$ or $e_{S}\rightarrow$ \emph{\textbf{Error}: string}.
+If $\vdash_{S}e_{S}:TST$ then $e_{S}$ is an unforced value or $e_{S}\rightarrow e_{S}'$ or $e_{S}\rightarrow$ \emph{\textbf{Error}: string}.
 
 \begin{proof}
 
@@ -33,8 +33,6 @@ By structural induction on $e_{S}$.
 \input{proof/cases/progress/scheme/if0.tex}
 
 \input{proof/cases/progress/scheme/wrong.tex}
-
-\input{proof/cases/progress/scheme/force.tex}
 
 \input{proof/cases/progress/scheme/ml.tex}
 
