Changed 'value' to 'unforced value' in the progress theorems. Fixed oen grammar problem in the pn intro in ch 3.

--- a/chapter-3.tex
+++ b/chapter-3.tex
@@ -34,7 +34,7 @@ The types of Haskell and ML values determine their syntactic forms:
 
 \section{Preservation}
 
-Preservation will be proven by cases on the rewrite rules.  In each case, the right side is be proven to be well-typed and have the same type as the left side.  Inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) are used to determine the types of the left side and its subexpressions and the type of the right side.  Some rewrite rules use expression and type substitutions.
+Preservation will be proven by cases on the rewrite rules.  In each case, the right side will be proven to be well-typed and have the same type as the left side.  Inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) are used to determine the types of the left side and its subexpressions and the type of the right side.  Some rewrite rules use expression and type substitutions.
 
 \subsection{Expression Substitution Lemma}
 
