--- a/proof/cases/progress/haskell-ml/haskell.tex
+++ b/proof/cases/progress/haskell-ml/haskell.tex
@@ -1,7 +1,7 @@
 \begin{case}
 
-$e_{M}={^{T}M}H^{T}$ $e_{H}$
+$e_{M}={^{T}M}H$ $e_{H}$
 
-$^{T}MH^{T}$ $e_{H}$ is an unforced value.
+$^{T}MH$ $e_{H}$ is an unforced value.
 
 \end{case}
