Going home for Christmas. Need to commit now.

--- a/model/haskell/operational-semantics/haskell.tex
+++ b/model/haskell/operational-semantics/haskell.tex
@@ -3,7 +3,7 @@
 \begin{tabular}{l}
 %\vspace{5pt}
 
-$\mathscr{E}[(\lambda x:T.e_{H}^{1})$ $e_{H}^{2}]_{H}\rightarrow\mathscr{E}[e_{H}^{1}[e_{H}^{2}/x]]$ \\
+$\mathscr{E}[(\lambda x:T.e_{H_1})$ $e_{H_2}]_{H}\rightarrow\mathscr{E}[e_{H_1}[e_{H_2}/x]]$ \\
 
 %\vspace{5pt}
 
