--- a/stripped.tex
+++ b/stripped.tex
@@ -29,8 +29,7 @@ $E^L$ & $=$ & $[\;]^L$ $|$ $E^L$ $e^L$ $|$ $LE$ $E^E$
 \]
 \begin{tabular}{rcl}
 $\mathscr{E}[(\lambda x^L.e^L_1)$ $e^L_2]^L$ & $\rightarrow$ & $\mathscr{E}[e^L_1[e^L_2/x^L]]$ \\
-$\mathscr{E}[LE$ $(\lambda x^E.e^E)]^L$ & $\rightarrow$ & $\mathscr{E}[\lambda x^L.(LE$ $((\lambda x^E.e^E)$ $(EL$ $x^L)))]$ \\
-$\mathscr{E}[LE$ $(EL$ $e^L)]^L$ & $\rightarrow$ & $\mathscr{E}[e^L]$
+$\mathscr{E}[LE$ $(\lambda x^E.e^E)]^L$ & $\rightarrow$ & $\mathscr{E}[\lambda x^L.(LE$ $((\lambda x^E.e^E)$ $(EL$ $x^L)))]$
 \end{tabular}
 \caption{Lazy model}
 \end{figure}
@@ -40,7 +39,7 @@ $\mathscr{E}[LE$ $(EL$ $e^L)]^L$ & $\rightarrow$ & $\mathscr{E}[e^L]$
 \begin{tabular}{rcl}
 $e^E$ & $=$ & $x^E$ $|$ $v^E$ $|$ $e^E$ $e^E$ \\
 $v^E$ & $=$ & $\lambda x^E.e^E$ $|$ $EL$ $e^L$ \\
-$E^E$ & $=$ & $[\;]^E$ $|$ $F$ $e^E$ $|$ $(\lambda x^E.e^E)$ $E^E$ \\
+$E^E$ & $=$ & $[\;]^E$ $|$ $F^E$ $e^E$ $|$ $(\lambda x^E.e^E)$ $E^E$ \\
 $F$ & $=$ & $E^E$ $|$ $EL$ $E^L$
 \end{tabular}
 \[
@@ -58,7 +57,6 @@ $F$ & $=$ & $E^E$ $|$ $EL$ $E^L$
 \begin{tabular}{rcl}
 $\mathscr{E}[(\lambda x^E.e^E)$ $v^E]^E$ & $\rightarrow$ & $\mathscr{E}[e^E[v^E/x^E]]$ \\
 $\mathscr{E}[EL$ $(\lambda x^L.e^L)]^E$ & $\rightarrow$ & $\mathscr{E}[\lambda x^E.(EL$ $((\lambda x^L.e^L)$ $(LE$ $x^E)))]$ \\
-$\mathscr{E}[EL$ $(LE$ $e^E)]^E$ & $\rightarrow$ & $\mathscr{E}[e^E]$
 \end{tabular}
 \caption{Eager model}
 \end{figure}
