--- a/thesis.tex
+++ b/thesis.tex
@@ -21,7 +21,7 @@
     bookmarksopenlevel=3,
     pdfstartview=FitV,
     pdfauthor={William Faught},
-    pdftitle={Interoperation Between Haskell, ML, and Scheme},
+    pdftitle={Interoperation for Incompatible Evaluation Strategies},
     pdfkeywords={thesis, masters, cal poly}]{hyperref}
   \pdfcompresslevel=1
 \else
@@ -59,7 +59,7 @@
 %\let\@currsize\normalsize
 \makeatother
 \begin{document}
-\title{Interoperation Between Haskell, ML, and Scheme}
+\title{Interoperation for Incompatible Evaluation Strategies}
 \author{William Faught}
 \degreemonth{June}
 \degreeyear{2008}
