--- a/model/haskell/operational-semantics/ml.tex
+++ b/model/haskell/operational-semantics/ml.tex
@@ -1,23 +1,39 @@
 \begin{figure}[p]
 \centering
 \begin{tabular}{l}
-% hm - mh
-$\mathscr{E}[\mathtt{hm}$ $t$ $(\mathtt{mh}$ $t$ $e^h)]^h\rightarrow\mathscr{E}[e^h]$
-% \mathtt{hm} - lump
+
+% hm t (mh t e)
+
+$\mathscr{E}[\mathtt{hm}$ $t$ $(\mathtt{mh}$ $t$ $e^h)]^h\rightarrow\mathscr{E}[e^h]$ \\
+
+% hm L (ms L v)
+
 $\mathscr{E}[\mathtt{hm}$ $\mathtt{L}$ $(\mathtt{ms}$ $\mathtt{L}$ $v^s)]^h\rightarrow\mathscr{E}[\mathtt{hs}$ $\mathtt{L}$ $v^s]$ \\
-% \mathtt{hm} - number
+
+% hm N n
+
 $\mathscr{E}[\mathtt{hm}$ $\mathtt{N}$ $\overline{n}]^h\rightarrow\mathscr{E}[\overline{n}]$ \\
-% \mathtt{hm} - list - nil
+
+% hm [t] (nil t)
+
 $\mathscr{E}[\mathtt{hm}$ $[t]$ $(\mathtt{nil}$ $t)]^h\rightarrow\mathscr{E}[\mathtt{nil}$ $t]$ \\
-% \mathtt{hm} - list - cons
-$\mathscr{E}[\mathtt{hm}$ $[t]$ $(\mathtt{cons}$ $v^m_1$ $v^m_2)]^h\rightarrow\mathscr{E}[\mathtt{cons}$ $(\mathtt{hm}$ $$ $v^m_1)$ $(^{[t]}\mathtt{hm}$ $v^m_2)]$ \\
-% \mathtt{hm} - function
-$\mathscr{E}[^{t_{1}\rightarrow t_{2}}\mathtt{hm}$ $(\lambda x^h_{1}:t_{1}.e^m)]^h\rightarrow$ \\
-$\quad\mathscr{E}[\lambda x^h_{2}:t_{1}.(^{t_{2}}\mathtt{hm}$ $((\lambda x^h_{1}:t_{1}.e^m)$ $(^{t_{1}}\mathtt{mh}$ $x^h_{2})))]$ \\
-% \mathtt{hm} - universal
-$\mathscr{E}[^{\forall x^h.t}\mathtt{hm}$ $(\Lambda x^h.e^m)]^h\rightarrow\mathscr{E}[\Lambda x^h.(\mathtt{hm}$ $$ $e^m)]$ \\
-% \mathtt{hm} - universal \mathtt{ms}
-$\mathscr{E}[^{\forall x^h.t}\mathtt{hm}$ $(^{\forall x^h.t}\mathtt{ms}$ $v^s)]^h\rightarrow\mathscr{E}[\mathtt{hs}$ $\forall x^h.t$ $v^s]$ \\
+
+% hm [t] (cons v v)
+
+$\mathscr{E}[\mathtt{hm}$ $[t]$ $(\mathtt{cons}$ $v^m_1$ $v^m_2)]^h\rightarrow\mathscr{E}[\mathtt{cons}$ $(\mathtt{hm}$ $t$ $v^m_1)$ $(\mathtt{hm}$ $[t]$ $v^m_2)]$ \\
+
+% hm (t -> t) (\ x : t . e)
+
+$\mathscr{E}[\mathtt{hm}$ $(t_1\rightarrow t_2)$ $(\lambda x^m:t_1.e^m)]^h\rightarrow\mathscr{E}[\lambda x^h:t_1.(\mathtt{hm}$ $t_2$ $((\lambda x^m:t_1.e^m)$ $(\mathtt{mh}$ $t_1$ $x^h)))]$ \\
+
+% hm (A x . t) (\\ x . e)
+
+$\mathscr{E}[\mathtt{hm}$ $(\forall x^h.t)$ $(\Lambda x^m.e^m)]^h\rightarrow\mathscr{E}[\Lambda x^h.\mathtt{hm}$ $t$ $e^m]$ \\
+
+% hm (A x . t) (ms (A x . t) v)
+
+$\mathscr{E}[\mathtt{hm}$ $(\forall x^h.t)$ $(\mathtt{ms}$ $(\forall x^h.t)$ $v^s)]^h\rightarrow\mathscr{E}[\mathtt{hs}$ $(\forall x^h.t)$ $v^s]$ \\
+
 \end{tabular}
 \caption{Haskell-ML operational semantics}
 \label{hmos}
