--- a/model/haskell/operational-semantics/scheme.tex
+++ b/model/haskell/operational-semantics/scheme.tex
@@ -1,27 +1,49 @@
 \begin{figure}[p]
 \centering
 \begin{tabular}{l}
-% hs - sh
-$\mathscr{E}[^{T}HS$ $(SH^{T}$ $e_{H})]_{H}\rightarrow\mathscr{E}[e_{H}]$ \\
-% hs - number
-$\mathscr{E}[^{N}HS$ $\overline{n}]_{H}\rightarrow\mathscr{E}[\overline{n}]$ \\
-% hs - number error
-$\mathscr{E}[^{N}HS$ $v_{S}]_{H}\rightarrow\mathscr{E}[\mathtt{wrong}^{N}$ ``Not a number"$]$ $(v_{S}\neq\overline{n})$ \\
-% hs - list - nil
-$\mathscr{E}[^{[T]}HS$ $\mathtt{nil}]_{H}\rightarrow\mathscr{E}[\mathtt{nil}^{T[T_{i}/T_{i}^{a}]}]$ \\
-% hs - list - cons
-$\mathscr{E}[^{[T]}HS$ $(\mathtt{cons}$ $v_{S}^{1}$ $v_{S}^{2})]_{H}\rightarrow\mathscr{E}[\mathtt{cons}$ $(^{T}HS$ $v_{S}^{1})$ $(^{[T]}HS$ $v_{S}^{2})]$ \\
-% hs - list error
-$\mathscr{E}[^{[T]}HS$ $v_{S}^{1}]_{H}\rightarrow\mathscr{E}[\mathtt{wrong}^{[T[T_{i}/T_{i}^{a}]]}$ ``Not a list"$]$ \\
-$\quad(v_{S}^{1}\not\in\lbrace\mathtt{nil},\mathtt{cons}$ $v_{S}^{2}$ $v_{S}^{3},SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})\rbrace)$ \\
-% hs - label error
-$\mathscr{E}[^{T^{a}}HS$ $v_{S}]_{H}\rightarrow\mathscr{E}[\mathtt{wrong}^{T}$ ``Parametricity violated"$]$ $(v_{S}\neq SH^{T^{a}}$ $e_{H})$ \\
-% hs - function
-$\mathscr{E}[^{T_{1}\rightarrow T_{2}}HS$ $(\lambda x_{1}.e_{S})]_{H}\rightarrow\mathscr{E}[\lambda x_{2}:T_{1}[T_{i}/T_{i}^{a}].(^{T_{2}}HS$ $((\lambda x_{1}.e_{S})$ $(SH^{T_{1}}$ $x_{2})))]$ \\
-% hs - function error
-$\mathscr{E}[^{T_{1}\rightarrow T_{2}}HS$ $v_{S}]_{H}\rightarrow\mathscr{E}[\mathtt{wrong}^{(T_{1}\rightarrow T_{2})[T_{i}/T_{i}^{a}]}$ ``Not a function"$]$ $(v_{S}\neq\lambda x.e_{S})$ \\
-% hs - universal
-$\mathscr{E}[(^{\forall X.T_{1}}HS$ $v_{S})$ $\lbrace T_{2}\rbrace]_{H}\rightarrow\mathscr{E}[^{T_{1}[T^{a}_{2}/X]}HS$ $v_{S}]$
+
+% hs t (sh t e)
+
+$\mathscr{E}[\mathtt{hs}$ $t$ $(\mathtt{sh}$ $t$ $e^h)]^h\rightarrow\mathscr{E}[e^h]$ \\
+
+% hs N n
+
+$\mathscr{E}[\mathtt{hs}$ $\mathtt{N}$ $\overline{n}]^h\rightarrow\mathscr{E}[\overline{n}]$ \\
+
+% hs N v
+
+$\mathscr{E}[\mathtt{hs}$ $\mathtt{N}$ $v^s]^h\rightarrow\mathscr{E}[\mathtt{wrong}$ $\mathtt{N}$ ``Not a number"$]$ $(v^s\neq\overline{n})$ \\
+
+% hs [t] nil
+
+$\mathscr{E}[\mathtt{hs}$ $[t]$ $\mathtt{nil}]^h\rightarrow\mathscr{E}[\mathtt{nil}$ $t[t_i/t_i.x^h]]$ \\
+
+% hs [t] (cons v v)
+
+$\mathscr{E}[\mathtt{hs}$ $[t]$ $(\mathtt{cons}$ $v^s_1$ $v^s_2)]^h\rightarrow\mathscr{E}[\mathtt{cons}$ $(\mathtt{hs}$ $t$ $v^s_1)$ $(\mathtt{hs}$ $[t]$ $v^s_2)]$ \\
+
+% hs [t] v
+
+$\mathscr{E}[\mathtt{hs}$ $[t]$ $v^s_1]^h\rightarrow\mathscr{E}[\mathtt{wrong}$ $[t[t_i/t_i.x^h]]$ ``Not a list"$]$ \\
+
+$\quad(v^s_1\not\in\lbrace\mathtt{nil},\mathtt{cons}$ $v^s_2$ $v^s_3,\mathtt{sh}$ $[t]$ $(\mathtt{cons}$ $e^h_1$ $e^h_2)\rbrace)$ \\
+
+% hs (t.x) v
+
+$\mathscr{E}[\mathtt{hs}$ $(t.x^h)$ $v^s]^h\rightarrow\mathscr{E}[\mathtt{wrong}$ $t$ ``Parametricity violated"$]$ $(v^s\neq \mathtt{sh}$ $(t.x^h)$ $e^h)$ \\
+
+% hs (t->t) (\x.e)
+
+$\mathscr{E}[\mathtt{hs}$ $(t_1\rightarrow t_2)$ $(\lambda x^s.e^s)]^h\rightarrow\mathscr{E}[\lambda x^h:t_1[t_i/t_i.x^h].\mathtt{hs}$ $t_2$ $((\lambda x^s.e^s)$ $(\mathtt{sh}$ $t_1$ $x^h))]$ \\
+
+% hs (t->t) v
+
+$\mathscr{E}[\mathtt{hs}$ $(t_1\rightarrow t_2)$ $v^s]^h\rightarrow\mathscr{E}[\mathtt{wrong}$ $(t_1\rightarrow t_2)[t_i/t_i.x^h]$ ``Not a function"$]$ $(v^s\neq\lambda x^s.e^s)$ \\
+
+% (hs (Ax.t) v) {t}
+
+$\mathscr{E}[(\mathtt{hs}$ $(\forall x^h.t_1)$ $v^s)$ $\lbrace t_2\rbrace]^h\rightarrow\mathscr{E}[\mathtt{hs}$ $(t_1[t_2.x^h/x^h])$ $v^s]$
+
 \end{tabular}
 \caption{Haskell-Scheme operational semantics}
 \label{hsos}
